--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impostos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="titulo">
+        <h1>Calculadora de INSS e IRPF</h1>
+    </div>
     <form>
         <label for="salarioBruto">Salário Bruto:</label>
         <input type="number" id="salarioBruto" name="salarioBruto"> 
